--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Gootae's Site</title>
+    <link rel="stylesheet" href="myStyle.css">
 </head>
 <body>
     <header>
@@ -20,12 +21,12 @@
 </nav>
 <section>
     <div id="profile">나의 사진<br>
-        <img src="./images/koo.png" alt="">
+        <img width = "790" height=" 644" src="./images/goo.png" alt="">
         <h2>좋아하는 음악</h2>
         <audio src="./media/music01.mp3" controls>
         지원하지 않는 브라우저입니다.
         </audio>
-        <h2>북극곰을 살려요~~</h2>
+        <h2 style = "font-size: x-large; color: indigo;">북극곰을 살려요~~</h2>
             <video src="./media/movie.mp4" controls></video>
             <iframe width="790" height="444" src="https://www.youtube.com/embed/y-V16e6C-m0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr>
@@ -62,6 +63,14 @@
         <a href="http://www.google.com">구글</a><br>
         <a href="./start.html">연습문서</a><br>
         <a href="#profile">나의 프로필</a>
+    </div>
+    <div id="login">
+        <form action="#" method="post">
+            아이디 : <input type="text" name = "id"><br>
+            비밀번호 : <input type="password" name="pw"><br>
+            <input type="submit" value="로그인">
+            <input type="reset" value="취소">
+        </form>
     </div>
 </section>
     <footer>
