--- a/website.html
+++ b/website.html
@@ -4,17 +4,17 @@
     <title>kIMGOOTAE'S SITE</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <script src="assets/js/jquery-3.3.1.js"></script>
-    <script src="assets/js/main.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <script src="/js/jquery-3.3.1.js"></script>
+    <script src="/js/main.js"></script>
 </head>
 
 <body>
     <div id="wrap">
         <div class="header">
             <div class="header-inner">
-                <div class="logo"><img src="./assets/image/logo.png"></div>
+                <div class="logo"><img src="./image/logo.png"></div>
                 <div class="gnb">
                     <ul class="gnb-box">
                         <li>
@@ -52,7 +52,7 @@
                     <div id="footer" class="footer section">
                         <div class="footer-inner">
                             <div class="copyright">
-                                <div class="logo"><img src="./assets/image/logo.png" width="50PX" height="50PX">
+                                <div class="logo"><img src="./image/logo.png" width="50PX" height="50PX">
                                     COPYRIGHT © 2021 Code Of Chivalry / KIMGOOTAE
                                 </div>
                             </div>
