--- a/website.html
+++ b/website.html
@@ -52,7 +52,7 @@
                     <div id="footer" class="footer section">
                         <div class="footer-inner">
                             <div class="copyright">
-                                <div class="logo"><img src="./image/logo.png" width="50PX" height="50PX">
+                                <div class="logo"><img src="./image/logo2.png" width="50PX" height="50PX">
                                     COPYRIGHT © 2021 Code Of Chivalry / KIMGOOTAE
                                 </div>
                             </div>
