--- a/website.html
+++ b/website.html
@@ -14,7 +14,7 @@
     <div id="wrap">
         <div class="header">
             <div class="header-inner">
-                <div class="logo"><img src="./assests/image/logo.png"></div>
+                <div class="logo"><img src="./assests/image/LOGO.png"></div>
                 <div class="gnb">
                     <ul class="gnb-box">
                         <li>
@@ -52,7 +52,7 @@
                     <div id="footer" class="footer section">
                         <div class="footer-inner">
                             <div class="copyright">
-                                <div class="logo"><img src="./assests/image/logo2.png" width="50PX" height="50PX">
+                                <div class="logo"><img src="./assests/image/LOGO2.png" width="50PX" height="50PX">
                                     COPYRIGHT © 2021 Code Of Chivalry / KIMGOOTAE
                                 </div>
                             </div>
